<?xml version="1.0"?>
<package format="2">
  <name>llm_bt_grasp</name>
  <version>1.0.0</version>
  <description>LLM-driven Behavior Tree for Grasping and Object Manipulation</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <!-- Behavior Tree Dependencies -->
  <build_depend>py_trees</build_depend>
  <build_depend>py_trees_ros</build_depend>
  
  <!-- Runtime Dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  
  <!-- Export tags -->
  <export>
    <node plugin="${prefix}/node_plugins.xml" />
  </export>
</package>


